WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
35253
Web Inspector: Regression:
r55027
+: Inspector broken
https://bugs.webkit.org/show_bug.cgi?id=35253
Summary
Web Inspector: Regression: r55027+: Inspector broken
Kevin M. Dean
Reported
2010-02-22 11:55:12 PST
PPC, 10.5.8, when using
r55027
+. If I try to open the Web Inspector with Command-Option-I or Inspect Element, the first time nothing happens and the second time the pane opens and is completely blank.
Attachments
Screenshot
(18.20 KB, image/png)
2010-02-22 12:19 PST
,
Kevin M. Dean
no flags
Details
Patch
(7.27 KB, patch)
2010-02-23 20:23 PST
,
Oliver Hunt
mjs
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kevin M. Dean
Comment 1
2010-02-22 12:19:01 PST
Created
attachment 49231
[details]
Screenshot Screenshot
Alexey Proskuryakov
Comment 2
2010-02-23 11:36:27 PST
***
Bug 35237
has been marked as a duplicate of this bug. ***
Alexey Proskuryakov
Comment 3
2010-02-23 11:37:19 PST
Per
bug 35253
, Yahoo Mail got broken on PowerPC in the same timeframe.
Alexey Proskuryakov
Comment 4
2010-02-23 11:37:47 PST
<
rdar://problem/7680864
>
Oliver Hunt
Comment 5
2010-02-23 14:06:24 PST
This is probably fallout from my getter caching change. Looking into it now.
Oliver Hunt
Comment 6
2010-02-23 14:48:44 PST
Okay the problem is that something is going wrong when performing the call to a cached getter from the prototype chain. Unsure of exactly what is going wrong, by code inspection it would appear to be correct, but we seem to be picking up the wrong this object :-/
Oliver Hunt
Comment 7
2010-02-23 20:23:53 PST
Created
attachment 49354
[details]
Patch
Maciej Stachowiak
Comment 8
2010-02-23 20:25:51 PST
Comment on
attachment 49354
[details]
Patch r=me
Oliver Hunt
Comment 9
2010-02-23 20:28:09 PST
Committed
r55181
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug