2010-02-23  Oliver Hunt  <oliver@apple.com>

Reviewed by Maciej Stachowiak.

        Web Inspector: Regression: r55027+: Inspector broken
        https://bugs.webkit.org/show_bug.cgi?id=35253

        op_get_by_id_getter_chain was not passing the correct this parameter.
        The bug was caused by incorrect use of baseCell instead of baseValue,
        baseValue contains the original object for the lookup (and hence the
        correct this object), baseCell is clobbered as part of walking the
        prototype chain.

        * interpreter/Interpreter.cpp:
        (JSC::Interpreter::privateExecute):
2010-02-23  Oliver Hunt  <oliver@apple.com>

        Reviewed by Maciej Stachowiak.

        Web Inspector: Regression: r55027+: Inspector broken
        https://bugs.webkit.org/show_bug.cgi?id=35253

        Add thorough testing of getter access to hit the various
        possible caching scenarios.

        * fast/js/pic/cached-getter-setter-expected.txt:
        * fast/js/pic/cached-getter-setter.html:

Canonical link: https://commits.webkit.org/46483@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@55181 268f45cc-cd09-0410-ab3c-d52691b4dbfc